Correct the warning box on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -188,10 +188,15 @@ input[type='button']:active {
     width: 70%;
     position: fixed;
     top: 30%;
-    left: 100px;
+    left: 50px;
     font-family: 'Montserrat', sans-serif;
     padding: 30px;
     border-radius: 20px;
+}
+
+.warning-text {
+    position: relative;
+    left: -20px;
 }
 
 #warning-content {
@@ -206,14 +211,19 @@ input[type='button']:active {
 #warning-close {
     float: right;
     position: absolute;
-    top: -5px;
-    right: 0;
+    top: 0px;
+    right: -10px;
     border: 1px solid #000;
     padding: 5px;
 }
 
 #warning-close:hover {
     background: #e3e3e3;
+    cursor: pointer;
+}
+
+#warning-close:active {
+    background: #444;
     cursor: pointer;
 }
 
